# Linux_programming_sbpu_university

./: README.md
Semester_1_and_2/konsp_1/: b.txt  script_1y  script_21  script_3  script_31.save  script_4  sk4
Semester_1_and_2/konsp_10/n1/: a.out  main.cc
Semester_1_and_2/konsp_10/n2/: a.out  main.cc  test.txt
Semester_1_and_2/konsp_10/n3/: a.out  main.cc
Semester_1_and_2/konsp_10/n4/: a.out  main.cc  test.txt
Semester_1_and_2/konsp_11/1/: a.out  main.cc
Semester_1_and_2/konsp_11/2/: 2.txt  main.cc  otv
Semester_1_and_2/konsp_11/3/: a.out  main.cc
Semester_1_and_2/konsp_12/: n1_v.txt  spr.txt
Semester_1_and_2/konsp_12/1/: n1.cc  n1_v.txt
Semester_1_and_2/konsp_12/2/: n2.cc  n2_v.txt
Semester_1_and_2/konsp_12/3/: n3.cc  n3_v.txt
Semester_1_and_2/konsp_12/4/: .n4.cc.swp  n4.cc  n4_v.txt
Semester_1_and_2/konsp_2/: no_4
Semester_1_and_2/konsp_3/n1/: .sc_1.swp  cc  sc_1  sc_11
Semester_1_and_2/konsp_3/n2/: .s1.swp  git  s1
Semester_1_and_2/konsp_3/n3/: .tt.swo  .tt.swp  fy  out.txt  tew
Semester_1_and_2/konsp_3/n4/: .sk1.swp  RENAME_FILES.SH  SDFSFGSG.TXT  SK1  TYY.TXT
Semester_1_and_2/konsp_4/: .a.txt.swo  .a.txt.swp  .test.swj  .test.swl  .test.swm  .test.swn  .test.swo  .test.swp  .test1.swp  .test2.swm  .test2.swn  .test2.swp  .test3.swm  .test3.swn  .test3.swo  .test3.swp  .test3.txt.swp  .tets2.swo  .tets2.swp  a.txt  spravocn  test2  test3
Semester_1_and_2/konsp_4/t1/: ewdg1.txt
Semester_1_and_2/konsp_5/n1/: t1  t3
Semester_1_and_2/konsp_8/n3/: 3.txt  main.cpp  meson.build
Semester_1_and_2/reahenie/: script_1  script_4
(+38 files in other folders)
